# FII-WADE

./: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: phase1-checklist.md
.specify/memory/: constitution.md
config/: settings.yaml
docker/: docker-compose.yml
docker/init-scripts/: init_db.sql
docs/: CNAME  index.html  mcp_server.py  webmcp.html
presentation/: README.md  index.html
specs/001-vuln-dds-sparql/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-vuln-dds-sparql/contracts/: openapi.yaml  rdf-ontology.ttl
src/: main.py
src/api/: __init__.py  app.py  ingestion_routes.py  sparql_routes.py
src/cli/: client_sparql.py  ingest.py
src/lib/: __init__.py  celery_app.py  config.py  db.py  logging.py  namespaces.py  rdf_store.py  redis_client.py
src/models/: __init__.py  vulnerability.py
src/services/: __init__.py
src/services/classification/: cpe_classifier.py
src/services/ingestion/: base_source.py  euvdb_client.py  nvd_client.py  tasks.py
src/services/rdf/: serializer.py
src/services/sparql/: endpoint.py  serializer.py  validator.py
tests/: conftest.py
tests/unit/: test_models.py  test_nvd_client.py  test_nvd_parser.py  test_rdf_serializer.py  test_sparql.py
